--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset your password
+{% endblock %}
 
 {% block body %}
-    {% for flash_error in app.flashes('reset_password_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
-    <h1>Reset your password</h1>
+	{% for flash_error in app.flashes('reset_password_error') %}
+		<div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+	{% endfor %}
+	<div class="card d-flex justify-content-center align-items-center vh-100 body">
+		<div class="card shadow-lg p-3 mb-5 bg-body rounded w-50">
+			<div class="row">
+				<div class="d-flex gap-4 justify-content-center w-100">
+					<div class="img bglogin col-md-5">
+						<img src="{{ asset('image/imgs/login_img1.svg') }}" class="img-fluid">
+					</div>
+					<div class="login-content col-md-7">
+						{{ form_start(requestForm) }}
+						<img src="{{ asset('image/imgs/logo.png') }}">
+						<div class="input-div one mb-3 mt-4">
+							<div class="i">
+								<i class="fas fa-envelope"></i>
+							</div>
+							<div class="div">
+								<h5>Email</h5>
+								{{ form_widget(requestForm.email, {'attr': {'class': 'input'}}) }}
+							</div>
+						</div>
+						<div>
+							<small>
+								Enter your email address, and we will send you a
+								                link to reset your password.
+							</small>
+						</div>
+						<input class="btn1 mt-4" type="submit" value="Send password reset email">
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address, and we will send you a
-                link to reset your password.
-            </small>
-        </div>
+						{{ form_end(requestForm) }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+	<script type="text/javascript" src="{{ asset('js/loginform.js') }}"></script>
+
 {% endblock %}
