fix module visit

--- a/templates/layout/sidebar.html.twig
+++ b/templates/layout/sidebar.html.twig
@@ -18,12 +18,12 @@
 					Tour Guides
 				</a>
 			</li>
-			{# <li>
-				<a href="{{ path('app_visit') }}" class="{{ app.request.attributes.get('_route') == 'app_visit' ? 'active' : '' }}">
+			<li>
+				<a href="{{ path('app_visit_index') }}" class="{{ app.request.attributes.get('_route') == 'app_visit_index' ? 'active' : '' }}">
 					<i class="bi bi-geo-alt"></i>
 					Visits
 				</a>
-			</li> #}
+			</li>
 			<li>
 				<a href="#" class="{{ app.request.attributes.get('_route') == 'app_statistics' ? 'active' : '' }}">
 					<i class="bi bi-graph-up"></i>
