--- a/templates/visit/new.html.twig
+++ b/templates/visit/new.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}New Visit{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Visit</h1>
 
     {{ include('visit/_form.html.twig') }}
