--- a/templates/visit/index.html.twig
+++ b/templates/visit/index.html.twig
@@ -1,49 +1,90 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Visit index{% endblock %}
+{% block title %}Visit index
+{% endblock %}
 
-{% block body %}
-    <h1>Visit index</h1>
+{% block content %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Pictures</th>
-                <th>Country</th>
-                <th>Adress</th>
-                <th>Date</th>
-                <th>Start_time</th>
-                <th>End_time</th>
-                <th>Duration</th>
-                <th>Comment</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for visit in visits %}
-            <tr>
-                <td>{{ visit.id }}</td>
-                <td>{{ visit.pictures ? visit.pictures|json_encode : '' }}</td>
-                <td>{{ visit.country }}</td>
-                <td>{{ visit.adress }}</td>
-                <td>{{ visit.date ? visit.date|date('Y-m-d') : '' }}</td>
-                <td>{{ visit.startTime ? visit.startTime|date('H:i:s') : '' }}</td>
-                <td>{{ visit.endTime ? visit.endTime|date('H:i:s') : '' }}</td>
-                <td>{{ visit.duration }}</td>
-                <td>{{ visit.comment }}</td>
-                <td>
-                    <a href="{{ path('app_visit_show', {'id': visit.id}) }}">show</a>
-                    <a href="{{ path('app_visit_edit', {'id': visit.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="10">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<div class="card">
+		<h1 class="titre text-center">Liste des visites</h1>
+	</div>
 
-    <a href="{{ path('app_visit_new') }}">Create new</a>
+	<a href="{{ path('app_visit_new') }}" class="btn btn-outline-success btn-circle btn-sm float-right mt-5">
+		<i class="fas fa-plus"></i>
+		Ajouter une visite
+	</a>
+
+	<div class="card mt-5">
+		<table class="table table-striped table-hover table-bordered mt-1">
+			<thead class="table-head-bg">
+				<tr>
+					<th scope="col">Id</th>
+					<th scope="col">Image</th>
+					<th scope="col">Pays</th>
+					<th scope="col">Adresse</th>
+					<th scope="col">Date</th>
+					<th scope="col">Actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for visit in visits %}
+					<tr>
+						<td>{{ visit.id }}</td>
+						<td>
+							{% if visit.pictures is not empty %}
+								<div style="display: flex; flex-wrap: wrap; gap: 10px;">
+									{% for picture in visit.pictures %}
+										<a href="{{ asset('uploads/visit/' ~ picture) }}" data-fancybox="gallery" data-caption="Photo de la visite">
+											<img src="{{ asset('uploads/visit/' ~ picture) }}" alt="Photo de la visite" class="avatar"/>
+										</a>
+									{% endfor %}
+								</div>
+							{% else %}
+								<p>Aucune photo enregistrée pour cette visite.</p>
+							{% endif %}
+						</td>
+						<td>{{ visit.country }}</td>
+						<td>{{ visit.adress }}</td>
+						<td>{{ visit.date|date('Y-m-d') }}</td>
+
+						<td>
+							<button class="btn btn-sm btn-info" data-bs-toggle="modal" data-bs-target="#visitModal{{ visit.id }}">
+								Afficher
+							</button>
+
+							<a href="{{ path('app_visit_edit', {'id': visit.id}) }}" class="btn btn-sm btn-primary">Modifier</a>
+						</td>
+					</tr>
+
+					<!-- Modal pour cet utilisateur -->
+					<div class="modal fade" id="visitModal{{ visit.id }}" tabindex="-1" aria-labelledby="visitModalLabel{{ visit.id }}" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="visitModalLabel{{ visit.id }}">Détails de la visite</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+								</div>
+								<div class="modal-body">
+									<p>
+										<strong>ID:</strong>
+										{{ visit.id }}</p>
+									<p>
+										<strong>Pays:</strong>
+										{{ visit.country }}</p>
+									<p>
+										<strong>Date:</strong>
+										{{ visit.date|date('Y-m-d') }}</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				{% else %}
+					<tr>
+						<td colspan="9" class="text-center">Aucune visite trouvée.</td>
+					</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</div>
+
 {% endblock %}
