ajout de visiteur

--- a/templates/layout/sidebar.html.twig
+++ b/templates/layout/sidebar.html.twig
@@ -30,12 +30,12 @@
 					Statistics
 				</a>
 			</li>
-			{# <li>
-				<a href="{{ path('app_visitor') }}" class="{{ app.request.attributes.get('_route') == 'app_visitor' ? 'active' : '' }}">
+			<li>
+				<a href="{{ path('app_visiteur_index') }}" class="{{ app.request.attributes.get('_route') == 'app_visiteur_index' ? 'active' : '' }}">
 					<i class="bi bi-people"></i>
 					Visitors
 				</a>
-			</li> #}
+			</li>
 			<li>
 				<a href="{{ path('app_user_index') }}" class="{{ app.request.attributes.get('_route') == 'app_user_index' ? 'active' : '' }}">
 					<i class="bi bi-person"></i>
