--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -5,6 +5,10 @@
 				<img src="{{ asset('image/imgs/whatsapp_image_2025_05_28_at_18_27_27_1749274277647_206.png') }}" alt="Logo" class="navbar-logo">
 				<span class="navbar-title">TravelParadise</span>
 			</div>
+			<div>{% block page %}
+  				Dashboard
+				{% endblock %}
+			</div>
 			<div class="navbar-search">
 				<div class="search-box">
 					<i class="bi bi-search"></i>
@@ -25,7 +29,7 @@
 						<img src="{{ asset('images/profile_8zlvs7_x_webp_1749274277646_593.png') }}" alt="Profile" class="img-fluid">
 					</div>
 					<div class="profile-info">
-						<span class="profile-name">Musfiq</span>
+						<span class="profile-name"> Romaric</span>
 						<span class="profile-role">Admin</span>
 					</div>
 					<i class="bi bi-chevron-down"></i>
