--- a/templates/layout/sidebar.html.twig
+++ b/templates/layout/sidebar.html.twig
@@ -13,7 +13,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="{{ app.request.attributes.get('_route') == 'app_tour_guides' ? 'active' : '' }}">
+				<a href="{{ path('guide_index') }}" class="{{ app.request.attributes.get('_route') == 'aguide_index' ? 'active' : '' }}">
 					<i class="bi bi-person-badge"></i>
 					Tour Guides
 				</a>
