--- a/templates/visiteur/_delete_form.html.twig
+++ b/templates/visiteur/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_visiteur_delete', {'id': visiteur.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ visiteur.id) }}">
-    <button class="btn">Delete</button>
-</form>
+{{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_end(form) }}
