--- a/templates/visiteur/_form.html.twig
+++ b/templates/visiteur/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_start(form, {'attr': {'class': 'needs-validation'}}) }}
+    {{ form_widget(form, {'attr': {'class': 'form-control'}}) }}
+    <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
