--- a/templates/layout/sidebar.html.twig
+++ b/templates/layout/sidebar.html.twig
@@ -9,7 +9,7 @@
 			<li>
 				<a href="{{ path('app_home') }}" class="{{ app.request.attributes.get('_route') == 'app_home' ? 'active' : '' }}">
 					<i class="bi bi-house-door"></i>
-					Dashboard
+					Menu
 				</a>
 			</li>
 			<li>
@@ -21,25 +21,25 @@
 			<li>
 				<a href="{{ path('app_visit_index') }}" class="{{ app.request.attributes.get('_route') == 'app_visit_index' ? 'active' : '' }}">
 					<i class="bi bi-geo-alt"></i>
-					Visits
+					Visites
 				</a>
 			</li>
 			<li>
 				<a href="#" class="{{ app.request.attributes.get('_route') == 'app_statistics' ? 'active' : '' }}">
 					<i class="bi bi-graph-up"></i>
-					Statistics
+					Statistiques
 				</a>
 			</li>
 			<li>
 				<a href="{{ path('app_visiteur_index') }}" class="{{ app.request.attributes.get('_route') == 'app_visiteur_index' ? 'active' : '' }}">
 					<i class="bi bi-people"></i>
-					Visitors
+					Visiteurs
 				</a>
 			</li>
 			<li>
 				<a href="{{ path('app_user_index') }}" class="{{ app.request.attributes.get('_route') == 'app_user_index' ? 'active' : '' }}">
 					<i class="bi bi-person"></i>
-					Users
+					Utilisateurs
 				</a>
 			</li>
 			<li>
