--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -635,3 +635,9 @@ img.avatar {
     width: 50px;
     height: 50px;
 }
+
+#world-map {
+  width: 100%;
+  height: 600px;
+  background-color: white;
+}
