--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -8,9 +8,9 @@
 		</title>
 
 		<!-- Styles CSS -->
+		<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 		<link
-		rel="stylesheet" href="{{ asset('css/styles.css') }}">
-		<link rel="stylesheet" href="{{ asset('assets/styles/form.css') }}">
+		rel="stylesheet" href="{{ asset('assets/styles/form.css') }}">
 		<!-- Font Awesome -->
 		<link
 		rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -27,6 +27,10 @@
 
 		<!-- Bootstrap Icons -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+
+
 	</head>
 	<body>
 		<div>
@@ -47,5 +51,6 @@
 document.querySelector('.sidebar').classList.toggle('show');
 });
 			</script>
+			<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 		</body>
 	</html>
