--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -61,7 +61,7 @@
 </div>
 
 <div class="mt-5 text-center">
-    <button type="submit" class="btn btn-lg icn-but px-5 py-2 rounded-pill shadow-sm">
+    <button type="submit" class="custom-button">
         Enregistrer
     </button>
 </div>
