--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block content %}
-<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 		
 		
 
